[package]
name = "test_riscv"
version = "0.0.0"
authors = [""]
edition = "2018"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
# Embassy Executor with RISC-V support
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-riscv32",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
defmt = "0.3.10"

# Use the GitHub repository for hifive1
e310x = { git = "https://github.com/riscv-rust/e310x", branch = "ehv1", features = [
    "rt",
    "critical-section",
] }

# Use the GitHub repository for hifive1 for generating the linker script
hifive1 = { git = "https://github.com/riscv-rust/e310x", features = [
    "board-redv",
] }


panic-halt = "1.0.0"
riscv-rt = { version = "0.13.0", features = ["single-hart"] }

embedded-hal-nb = { version = "1.0.0" }
embedded-hal = { version = "1.0.0" }

defmt-rtt = "0.4.0"

embassy-sifive = { path = "embassy-sifive", features = [
    "defmt",
    "time-driver",
    "time",
] }

utils = { path = "utils" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
