[package]
name = "sifive"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-time-driver = "0.1.0"
embassy-time = { version = "0.3.2", optional = true }

hifive1 = { git = "https://github.com/riscv-rust/e310x", features = [
    "board-redv",
] }
riscv = "0.12.1"

riscv-rt = "0.13.0"
panic-halt = "1.0.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
