[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.1.3" }
embassy-sifive = { path = "../embassy-sifive", features = [
    "defmt",
    "time-driver",
    "time",
] }
e310x = { git = "https://github.com/riscv-rust/e310x", branch = "ehv1", features = [
    "rt",
    "critical-section",
] }
nb = "1.0.0"
riscv = "0.12.1"

[package.metadata.docs.rs]
features = ['board-redv']
